[gd_scene load_steps=5 format=3 uid="uid://bam2oqsl8sqc3"]

[ext_resource type="Texture2D" uid="uid://dv3n81hbaxgbp" path="res://Items/Sprites/items.png" id="1_8usek"]
[ext_resource type="Script" path="res://GUI/Pause_Menu/Stats/stats.gd" id="2_k5d66"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6av"]
atlas = ExtResource("1_8usek")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5uqa5"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_2m6av")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="Stats" type="PanelContainer"]
offset_right = 212.0
offset_bottom = 104.0
theme_override_styles/panel = SubResource("StyleBoxTexture_5uqa5")
script = ExtResource("2_k5d66")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LevelContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.831373, 0.498039, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Level"

[node name="lvl_stat" type="Label" parent="VBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 2

[node name="XPContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/XPContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.831373, 0.498039, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "XP"

[node name="xp_stat" type="Label" parent="VBoxContainer/XPContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 2

[node name="ATKContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ATKContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.831373, 0.498039, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Attack"

[node name="ATK_stat" type="Label" parent="VBoxContainer/ATKContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 2

[node name="DEFContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/DEFContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.831373, 0.498039, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Defense"

[node name="DEF_stat" type="Label" parent="VBoxContainer/DEFContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 2
